dev: fixed datetimepicker z-index [WTEL-1291]

--- a/src/css/components/molecules/wt-datetimepicker/_variables.scss
+++ b/src/css/components/molecules/wt-datetimepicker/_variables.scss
@@ -6,7 +6,7 @@
 
   --datetimepicker-form-padding: 10px;
   --datetimepicker-form-bg-color: var(--main-primary-color);
-  --datetimepicker-form-z-index: 1;
+  --datetimepicker-form-z-index: 5; // overflow selects' arrow
 
   --datetimepicker-form-content-margin: 10px;
 }
